# ouroboros

./: .gitignore  .travis.yml  COPYRIGHT  Changes  MANIFEST  MANIFEST.SKIP  Makefile.PL  Ouroboros.xs  README.md  appveyor.yml  autogenerated.inc  fn-pointer-xs.inc  libouroboros.c  libouroboros.h  libouroboros.txt
demo/go/: Makefile  README.md  gone.go
demo/go/lib/: Gone.pm
demo/rust/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  lto.mk
demo/rust/lib/: Rusty.pm
demo/rust/src/: lib.rs  macros.rs  xs.rs
lib/: Ouroboros.pm
lib/Ouroboros/: Library.pm  Spec.pm
t/: 2-ffi-platypus.t  2-ffi-raw.t  2-ffi.t  3-sizes.t
tools/: regen.pl  update-subs.pl
tools/lib/: SpecParser.pm
